# nonebot-plugin-osubot

./: .gitignore  .gitmodules  .pdm-python  .pre-commit-config.yaml  README.md  __init__.py  migrate.py  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml  pypi-publish.yml  ruff.yml  tests.yml
design/history/: concepts.html  render.py
migrations/versions/: 3e54cda0ba0d_first_revision.py  3e54cda0ba0d_fisrt_revision.py  68a04ea31d05_first_revision.py
nonebot_plugin_osubot/: __init__.py  api.py  beatmap_stats_moder.py  config.py  data.py  draw.py  file.py  mods.py  pp.py  sql.py
nonebot_plugin_osubot/database/: __init__.py  models.py
nonebot_plugin_osubot/draw/: __init__.py  bmap.py  bp.py  catch_preview.py  echarts.py  info.py  map.py  match_history.py  osu_preview.py  rating.py  score.py  static.py  taiko_preview.py  utils.py
nonebot_plugin_osubot/draw/catch_preview/: pic.html
nonebot_plugin_osubot/draw/catch_preview/css/: style.css
nonebot_plugin_osubot/draw/catch_preview/js/beatmap/: hitobject.js
nonebot_plugin_osubot/draw/catch_preview_templates/: pic.html
nonebot_plugin_osubot/draw/catch_preview_templates/js/: preview.js  viewbox.js
nonebot_plugin_osubot/draw/info_templates/: index.html
nonebot_plugin_osubot/draw/osu_preview_templates/: index.html  pic.html
nonebot_plugin_osubot/draw/osu_preview_templates/css/: style.css
nonebot_plugin_osubot/draw/osu_preview_templates/js/: preview.js  util.js
nonebot_plugin_osubot/draw/templates/: bpa_chart.html  mod_chart.html  pp_rank_line_chart.html  t.html
nonebot_plugin_osubot/info/: __init__.py  bg.py  bind.py
nonebot_plugin_osubot/mania/: __init__.py
nonebot_plugin_osubot/matcher/: __init__.py  bind.py  bp.py  bp_analyze.py  getbg.py  guess.py  history.py  info.py  map.py  map_convert.py  match.py  medal.py  mu.py  osu_help.py  osudl.py  pr.py  preview.py  rank.py  rating.py  recommend.py  score.py  update.py  update_mode.py  url_match.py  utils.py
nonebot_plugin_osubot/network/: __init__.py  auto_retry.py  first_response.py
nonebot_plugin_osubot/osufile/medals/: medals.json
nonebot_plugin_osubot/schema/: __init__.py  alphaosu.py  beatmap.py  beatmapsets.py  draw_info.py  match.py  pp.py  sayo_beatmap.py  score.py  user.py
nonebot_plugin_osubot/schema/ppysb/: __init__.py
nonebot_plugin_osubot/utils/: __init__.py
src/nonebot_plugin_osubot/: __init__.py  agent_tools.py  api.py  beatmap_stats_moder.py  config.py  file.py  help_data.py  history_data.py  mods.py  pp.py
src/nonebot_plugin_osubot/database/: models.py
src/nonebot_plugin_osubot/draw/: bmap.py  bp.py  echarts.py  info.py  map.py  map_render.py  match_history.py  osu_preview.py  rank.py  rating.py  recommend.py  score.py  static.py  taiko_preview.py  utils.py
src/nonebot_plugin_osubot/draw/bmap_templates/: index.html
src/nonebot_plugin_osubot/draw/bp_templates/: index.html
src/nonebot_plugin_osubot/draw/catch_preview_templates/: pic.html
src/nonebot_plugin_osubot/draw/info_templates/: index.html  output.css
src/nonebot_plugin_osubot/draw/map_templates/: index.html
src/nonebot_plugin_osubot/draw/match_templates/: index.html
src/nonebot_plugin_osubot/draw/osu_preview_templates/: pic.html
src/nonebot_plugin_osubot/draw/rank_templates/: index.html
src/nonebot_plugin_osubot/draw/rating_templates/: index.html
src/nonebot_plugin_osubot/draw/score_templates/: index.html
src/nonebot_plugin_osubot/draw/templates/: bpa_chart.html  pp_rank_line_chart.html  recommend.html
src/nonebot_plugin_osubot/info/: bg.py  bind.py
src/nonebot_plugin_osubot/mania/: __init__.py
src/nonebot_plugin_osubot/matcher/: __init__.py  bind.py  bp.py  bp_analyze.py  getbg.py  guess.py  history.py  map.py  map_context.py  map_convert.py  match.py  medal.py  mu.py  osu_help.py  osudl.py  pr.py  preview.py  rank.py  rating.py  recommend.py  score.py  update.py  update_mode.py  url_match.py  utils.py
src/nonebot_plugin_osubot/network/: auto_retry.py  first_response.py  manager.py
src/nonebot_plugin_osubot/osufile/: help.html
src/nonebot_plugin_osubot/osufile/medals/: medals.json
src/nonebot_plugin_osubot/schema/: alphaosu.py  draw_info.py  match.py  score.py  user.py
src/nonebot_plugin_osubot/schema/ppysb/: __init__.py
src/nonebot_plugin_osubot/utils/: __init__.py
tests/: README.md  __init__.py  conftest.py  fake.py  test_bind.py  test_bp.py  test_guess.py  test_help_data.py  test_history_data.py  test_history_draw.py  test_info.py  test_map.py  test_map_context.py  test_match_history_draw.py  test_matchers.py  test_matchers2.py  test_misc.py  test_preview.py  test_rank_draw.py  test_recommend.py  test_score.py  test_score_lists.py  test_simple_matchers.py  test_update.py  test_update_mode.py  test_utils.py  utils.py  view_output.py
(+50 files in other folders)
