[project]
name = "nonebot-plugin-osubot"
version = "5.7.0"
description = "OSUbot in NoneBot2"
authors = [
    {name = "yaowan233", email = "572473053@qq.com"},
]
license = {text = "AGPL-3.0"}
dependencies = [
    "nonebot2~=2.2.0",
    "pydantic~=1.10",
    "nonebot-plugin-alconna>=0.42.3",
    "nonebot-plugin-session~=0.3",
    "pillow>=9.2.0",
    "expiringdict>=1.2.2",
    "nonebot-plugin-apscheduler~=0.4.0",
    "tortoise-orm>=0.20.0",
    "nonebot-plugin-tortoise-orm>=0.1.1",
    "rosu-pp-py==1.0.0",
    "reamber>=0.2.1",
    "httpx>=0.23.3",
    "typing_extensions>=4.11.0",
    "matplotlib>=3.7.1",
    "graiax-silkcoder>=0.3.6",
]
requires-python = ">=3.9.8,<3.13"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/yaowan233/nonebot-plugin-osubot"
Repository = "https://github.com/yaowan233/nonebot-plugin-osubot"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
test = [
    "nonebug>=0.3.5",
    "pytest-asyncio>=0.21.1",
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
]
