[project]
name = "nonebot-plugin-osubot"
version = "6.9.2"
description = "OSUbot in NoneBot2"
authors = [
    {name = "yaowan233", email = "572473053@qq.com"},
]
license = {text = "AGPL-3.0"}
dependencies = [
    "nonebot2>=2.3.0",
    "pydantic~=1.10",
    "nonebot-plugin-alconna>=0.46.4",
    "nonebot-plugin-session~=0.3",
    "pillow>=9.2.0",
    "expiringdict>=1.2.2",
    "nonebot-plugin-apscheduler~=0.4.0",
    "tortoise-orm>=0.20.0",
    "nonebot-plugin-tortoise-orm>=0.1.4",
    "rosu-pp-py==1.1.0",
    "reamber>=0.2.1",
    "httpx>=0.23.3",
    "typing_extensions>=4.11.0",
    "matplotlib>=3.7.1",
    "graiax-silkcoder>=0.3.6",
    "nonebot-plugin-htmlrender>=0.3.1",
    "nonebot-plugin-waiter>=0.6.1",
]
requires-python = ">=3.9.8,<3.13"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/yaowan233/nonebot-plugin-osubot"
Repository = "https://github.com/yaowan233/nonebot-plugin-osubot"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
test = [
    "isort>=5.13.2",
    "black>=24.4.2",
    "loguru>=0.7.2",
    "ruff>=0.4.2",
    "nonemoji>=0.1.4",
    "nonebug>=0.3.5",
    "pytest-asyncio>=0.21.1",
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "pre-commit>=3.7.1",
]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402"]
